--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -329,6 +329,7 @@ The two new chart layouts used is constructed using the same principles, like he
 \label{fig:etdrs_one_line}
 \end{figure}
 
+\pagebreak
 Once an estimated visual acuity have been achieved from the one line chart, the user can select an optotype and display the second new layout, which only display one optotype at a time (fig. \ref{fig:etdrs_single}). This layout removes all clutter and allow the patient to easily focus on only a single optotype at a time. The user can then page between the different optotype sizes in order to determine the visual acuity.
 
 \begin{figure}[ht!  ]
