--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -30,7 +30,7 @@
 \begin{document}
 \pagenumbering{roman}
 
-\title{Report Draft\\Digitalization of Visual Acuity Testing}
+\title{Digitalization of Visual Acuity Testing}
 \author{Anders Ohlsson\\Christian Johansson\\Svante Nilsson}
 \maketitle
 
