--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -35,7 +35,7 @@
 \maketitle
 
 \begin{abstract}
-Digitalization of Visual Acuity Testing is a project about digitally displaying and manipulating optician's eye charts. The charts are displayed on a digital screen with a lightweight server running on a Raspberry Pi and controlled over wireless network via an Android tablet. This solves several problems relating to lighting and distance from the patient to the chart, while also providing more ways for the optician to tailor the examination to the patient. The Digitalization of Visual Acuity Testing project has improved upon a proof-of-concept system that has been used at the Uppsala University Hospital to test whether or not digital screens are a viable alternative to physical charts. The project fulfills our goals and has performed well under testing by us, but more testing is needed to make sure it meets the demands of practicing Ophthalmologists. 
+Digitalization of Visual Acuity Testing is a project about digitally displaying and manipulating optician's eye charts. The charts are displayed on a digital screen with a lightweight server running on a Raspberry Pi and controlled over wireless network via an Android tablet. This solves several problems related to the distance from the patient to the chart, while also providing more ways for the optician to tailor the examination to the patient. The Digitalization of Visual Acuity Testing project has improved upon a proof-of-concept system that has been used at the Uppsala University Hospital to test whether or not digital screens are a viable alternative to physical charts. The project fulfills our goals and has performed well under testing by us, but more testing is needed to make sure it meets the demands of practicing opticians. 
 \end{abstract}
 
 \tableofcontents
