La in en pagebreak

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -250,6 +250,7 @@ An optotype is a symbol that is used on a visual acuity chart. The optotypes are
 \label{fig:optotypes_example}
 \end{figure}
 
+\pagebreak
 \subsection{ETDRS Chart}
 The ETDRS chart consists of fourteen rows with five optotypes on each row. The size of each optotype is measured in LogMAR (Logarithmic of the Minimum Angle of Resolution) which is the base 10 logarithm of the angle of one fifth of an optotype (eq. \ref{eq:logmar} and fig. \ref{fig:logmar_calculation}) \cite{Bailey}. The angle unit is measured in arcminutes, where one arcminute is $\dfrac{1}{60}$ degrees or $\dfrac{\pi}{10800}$ radians. If the angle v in figure \ref{fig:logmar_calculation} is equal to 8 arcminutes, then the size of the letter would be $log_{10}(8) \approx 0.903\ LogMAR$.
 
@@ -268,7 +269,7 @@ The ETDRS chart consists of fourteen rows with five optotypes on each row. The s
 
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=100mm]{images/logmar_calculation.png}
+\includegraphics[width=110mm]{images/logmar_calculation.png}
 \caption{The angle v is used to calculate the size in LogMAR of the optotype.\label{fig:logmar_calculation}}
 \end{figure} 
 
