--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -136,8 +136,8 @@ Several different versions of visual acuity chart exist today. The ETDRS (Early 
 
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=60mm]{images/snellen_chart.png}
-\caption{The Snellen chart \\ (Source: http://en.wikipedia.org/wiki/Snellen\_chart).} \label{fig:snellen_chart}
+\includegraphics[width=60mm]{images/Snellen_chart.png}
+\caption{The Snellen chart \cite{img_snellen}} \label{fig:snellen_chart}
 \end{figure} 
 
 \subsection{Digital visual acuity charts}
