--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -75,6 +75,7 @@
   	year = 2015,
   	url = {http://developer.android.com/design/get-started/principles.html},
   	note = {visited on 2015-05-22}
+}
 
 @online{Kryonet,
   title = {Kryonet},
@@ -121,6 +122,14 @@ author = "{Söderberg, PG.}",
 title = {Ophthalmology},
 note = { Dept. of neuroscience, Uppsala University },
 year = {2015}
+}
+
+@online{img_snellen,
+ author  = "{Jeff Dahl}",
+ title   = "A typical Snellen chart",
+ year    = "2008",
+ url     = {https://upload.wikimedia.org/wikipedia/commons/9/9f/Snellen\_chart.svg},
+ note 	= {visited on 2015-08-27}
 }
 
 
