Got permission for ETDRS image

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -214,7 +214,7 @@ The visual acuity charts used in this project are based on ETDRS (Early Treatmen
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=100mm]{images/etdrs_chart.jpg}
-\caption{Example of a ETDRS chart \\ (Source: http://precision-vision.com/)\label{fig:etdrs_chart}}
+\caption{Example of a ETDRS chart. \\ Image courtesy of Precision Vision \\ (Source: http://precision-vision.com/)\label{fig:etdrs_chart}}
 \end{figure} 
 
 \subsection{Optotypes} \label{Optotypes}
